--- a/src/stories/base.css
+++ b/src/stories/base.css
@@ -2,3 +2,17 @@ body {
     font-family: "Nunito Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
 }
+
+header {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 3rem;
+    padding-inline: 1rem;
+    background-color: #222;
+    border-bottom: 1px solid #444;
+    color: #eaeaea;
+}
